--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FakeStoreAppProject">
         <activity
-            android:name=".ui.MainActivity"
+            android:name="com.example.fakestoreappproject.ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FakeStoreAppProject">
