--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
 
-androidGradlePlugin = "8.11.1"
+androidGradlePlugin = "8.12.0"
 coilCompose = "2.4.0"
 coilComposeVersion = "2.1.0"
 converterGson = "3.0.0"
 kotlin = "2.2.0"
-ksp = "1.9.22-1.0.17"
+ksp = "2.2.0-2.0.2"
 coreKtx = "1.16.0"
 lifecycle = "2.9.2"
 activityCompose = "1.10.1"
@@ -40,6 +40,7 @@ androidx-material = { module = "androidx.compose.material:material", version.ref
 androidx-navigation-compose-v277 = { module = "androidx.navigation:navigation-compose", version.ref = "navigationComposeVersion" }
 androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingRuntimeKtx" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
@@ -85,18 +86,3 @@ kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref =
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-[bundles]
-compose = [
-    "androidx-activity-compose",
-    "androidx-ui",
-    "androidx-ui-graphics",
-    "androidx-ui-tooling-preview",
-    "androidx-material3",
-    "androidx-navigation-compose"
-]
-
-networking = [
-    "retrofit",
-    "retrofit-kotlinx-serialization",
-    "kotlinx-serialization-json"
-]
